--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "prisma:generate:local": "prisma generate --schema=prisma/schema.prisma",
     "prisma:generate:auth": "prisma generate --schema=prisma/auth/schema.prisma",
     "prisma:generate:user": "prisma generate --schema=prisma/user/schema.prisma",
-    "prisma:generate:all": "npm run prisma:generate:local && npm run prisma:generate:auth && npm run prisma:generate:user",
+    "prisma:generate:metric": "prisma generate --schema=prisma/metric/schema.prisma",
+    "prisma:generate:all": "npm run prisma:generate:local && npm run prisma:generate:auth && npm run prisma:generate:user && npm run prisma:generate:metric",
     "prisma:db:pull": "prisma db pull",
     "prisma:db:pull:local": "prisma db pull --schema=prisma/schema.prisma",
     "prisma:db:pull:auth": "prisma db pull --schema=prisma/auth/schema.prisma",
     "prisma:db:pull:user": "echo 'Evitar pull en remotos: usa schema.min.prisma manual'",
+    "prisma:db:pull:metric": "prisma db pull --schema=prisma/metric/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=prisma/schema.prisma"
   },
@@ -40,8 +42,9 @@
     "chartjs-node-canvas": "^5.0.0",
     "cors": "^2.8.5",
     "docx": "^9.5.0",
-    "docxtemplater": "^3.63.4",
+    "docxtemplater": "^3.67.5",
     "docxtemplater-image-module": "^3.1.0",
+    "docxtemplater-image-module-free": "^1.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
@@ -56,6 +59,7 @@
     "mysql2": "^3.6.0",
     "mysqldump": "^3.2.0",
     "node-cron": "^3.0.3",
+    "ollama": "^0.6.3",
     "pizzip": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
